Add my username to index.html file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+<img src="https://octodex.github.com/images/profile-areeb.gif" id="Muhammad Areeb Kazmi" alt="" />
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
 
+<p>Hello World! I’m Muhammad Areeb Kazmi. This is my website!</p>
 </body>
 </html>
